input type number only

--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,9 @@ label{
     transform: rotate(360deg);
   }
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
