--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: #282c34;
 }
 
@@ -35,7 +35,7 @@ label{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -57,4 +57,25 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+table{
+  border-style: solid;
+  padding: 2px;
+  margin-top: 10px;
+  display:table;
+}
+
+.table-row{
+  display: flex;
+  justify-content: space-between;
+}
+
+td{
+  border-style:ridge;
+  border-width: 1px;
+  padding: 2px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: lighter;
 }
