--- a/src/App.css
+++ b/src/App.css
@@ -162,10 +162,28 @@ td{
   border: none;
   overflow: hidden;
   max-width: 100vw;
+  padding: 7px;
 }
 
 textarea {
   resize: none;
+}
+textarea:focus{
+  outline: 0;
+}
+
+.pConversion {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 10px;
+  font-weight: lighter;
+  width: 24vw;
+  max-width: 100vw;
+  margin: 10px;
+  color: #61dafb;
+}
+
+.font12 {
+  font-size: 12px;
 }
 
 select {
