--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,6 @@
   background-color: #282c34;
 }
 
-.UnitDiv{
-  display: flex;
-  justify-content: space-around;
-  width: auto;
-  margin: 10px;
-}
-
 label{
   width: 50px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -75,6 +68,26 @@ label{
 
 #conversionDiv {
   display: none;
+  width: min-content;
+}
+
+.UnitDivDiv {
+  margin: 10px;
+}
+
+.UnitDiv{
+  display: flex;
+  justify-content: space-around;
+  width: auto;
+  margin: 10px;
+}
+
+.pConversion {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 10px;
+  font-weight: lighter;
+  max-width: 100vw;
+  color: #61dafb;
 }
 
 #yarnTableDiv {
@@ -172,19 +185,6 @@ textarea:focus{
   outline: 0;
 }
 
-.pConversion {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 10px;
-  font-weight: lighter;
-  width: 24vw;
-  max-width: 100vw;
-  margin: 10px;
-  color: #61dafb;
-}
-
-.font12 {
-  font-size: 12px;
-}
 
 select {
   width: 100%;
